[package]
name = "nsga2"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/nsga2-rs"
description = "NSGA-2"
keywords = ["evolution", "genetic", "algorithm"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.3"
rayon = { git = "https://github.com/nikomatsakis/rayon" }
time = "0.1"
